Начал делать фидбеки

--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -156,23 +156,22 @@
       </div>
     </div>
     <div class="sayabout">
+      <h1>Что о нас говорят?</h1>
       <div class="aboutus">
-        <img src="#" alt="Аватар1" />
-        <p>Михаил</p>
-        <p>
+        <img src="/img/photo.png" alt="Аватар1" />
+        <p class="username">Михаил</p>
+        <p class="feedback">
           Ездил с супругой в большой 7-дневный тур. Сервис и организация
           похода просто на высоте! Все очень понравилось.
         </p>
       </div>
       <div class="aboutus">
-        <img src="#" alt="Аватар2" />
-        <p>Ирина</p>
-        <p>
+        <img src="/img/photo1.png" alt="Аватар2" />
+        <p class="username">Ирина</p>
+        <p class="feedback">
           Очень порадовало наличие туров, в которые можно отправиться с
           детьми. Приятно провели время на природе.
         </p>
-        <p>Лево</p>
-        <p>Право</p>
       </div>
       <p>Лево</p>
       <p>Право</p>
