--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -157,24 +157,27 @@
     </div>
     <div class="sayabout">
       <h1>Что о нас говорят?</h1>
-      <div class="aboutus">
-        <img src="/img/photo.png" alt="Аватар1" />
-        <p class="username">Михаил</p>
-        <p class="feedback">
-          Ездил с супругой в большой 7-дневный тур. Сервис и организация
-          похода просто на высоте! Все очень понравилось.
-        </p>
+      <div class="aboutuswrapper">
+        <div class="aboutus">
+          <img src="/img/photo.png" alt="Аватар1" />
+          <p class="username">Михаил</p>
+          <p class="feedback">
+            Ездил с супругой в большой 7-дневный тур. Сервис и организация
+            похода просто на высоте! Все очень понравилось.
+          </p>
+        </div>
+        <div class="aboutus">
+          <img src="/img/photo1.png" alt="Аватар2" />
+          <p class="username">Ирина</p>
+          <p class="feedback">
+            Очень порадовало наличие туров, в которые можно отправиться с
+            детьми. Приятно провели время на природе.
+          </p>
+        </div>
+
       </div>
-      <div class="aboutus">
-        <img src="/img/photo1.png" alt="Аватар2" />
-        <p class="username">Ирина</p>
-        <p class="feedback">
-          Очень порадовало наличие туров, в которые можно отправиться с
-          детьми. Приятно провели время на природе.
-        </p>
-      </div>
-      <p>Лево</p>
-      <p>Право</p>
+      <a class="arrowleft" href="#"><img src="/img/Arrow 7.svg" alt="Стрелка тунды ←" /></a>
+      <a class="arrowright" href="#"><img src="/img/Arrow 6.svg" alt="Стрелка тунда →" /></a>
     </div>
     <div class="request">
       <h1>Оставьте заявку...</h1>
