--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -180,24 +180,29 @@
       <a class="arrowright" href="#"><img src="/img/Arrow 6.svg" alt="Стрелка тунда →" /></a>
     </div>
     <div class="request">
-      <h1>Оставьте заявку...</h1>
-      <p>
-        Не можете определиться с туром? Оставьте свой номер телефона, и мы
-        перезвоним Вам в ближайшее время.
-      </p>
-      <form action="#" method="post">
-        <ul>
-          <li>
-            <input type="text" id="name" name="request" value="Имя" />
-          </li>
-          <li>
-            <input type="tel" id="tel" name="request" value="+ 7 (999) 765 43 21" />
-          </li>
-          <li>
-            <button type="submit">Отправить</button>
-          </li>
-        </ul>
-      </form>
+      <div class="textrequest">
+        <h1>Оставьте заявку...</h1>
+        <p>
+          Не можете определиться с туром? Оставьте свой номер телефона, и мы
+          перезвоним Вам в ближайшее время.
+        </p>
+      </div>
+      <div class="formrequest">
+        <form action="#" method="post">
+          <ul>
+            <li>
+              <input type="text" id="name" name="request" value="Имя" />
+            </li>
+            <li>
+              <input type="tel" id="tel" name="request" value="+ 7 (999) 765 43 21" />
+            </li>
+            <li>
+              <button type="submit">Отправить</button>
+            </li>
+          </ul>
+        </form>
+
+      </div>
     </div>
   </div>
   <footer>
