--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -242,41 +242,38 @@
       </div>
     </div>
     <footer>
-      <!--
-            тут должно быть фоновое изображение
-        -->
-      <div>
+      <div class="footernote">
         <h1>...или приходите в наш офис</h1>
         <div class="contact">
-          <img src="#" alt="Пиктограмма маркера" />
+          <img src="/img/point.svg" alt="Пиктограмма маркера" />
           <p>г. Уфа, ул. Карла Маркса, 19 c 10:00 до 19:00</p>
-          <img src="#" alt="Пиктограмма телефона" />
+          <img src="/img/cell.svg" alt="Пиктограмма телефона" />
           <p>+ 7 (999) 123 45 67</p>
-          <img src="#" alt="Пиктограмма конверта" />
+          <img src="/img/mail.svg" alt="Пиктограмма конверта" />
           <p>bashtour@gmail.com</p>
         </div>
-        <div class="footer">
-          <div class="logo">
-            <img src="/img/Vector.png" alt="BASHTOUR" />
-            <p>BASHTOUR</p>
-          </div>
-          <div class="social">
-            <a href="#">
-              <img src="#" alt="Vk" />
-            </a>
-            <a href="#">
-              <img src="#" alt="Ints" />
-            </a>
-            <a href="#">
-              <img src="#" alt="Youtube" />
-            </a>
-            <a href="#">
-              <img src="#" alt="Facebook" />
-            </a>
-          </div>
-          <a href="#">Все права защищены</a>
-          <a href="#">Политика конфиденциальности</a>
+      </div>
+      <div class="footer">
+        <div class="logo">
+          <img src="/img/Vector.png" alt="BASHTOUR" />
+          <p>BASHTOUR</p>
         </div>
+        <div class="social">
+          <a href="#">
+            <img src="#" alt="Vk" />
+          </a>
+          <a href="#">
+            <img src="#" alt="Ints" />
+          </a>
+          <a href="#">
+            <img src="#" alt="Youtube" />
+          </a>
+          <a href="#">
+            <img src="#" alt="Facebook" />
+          </a>
+        </div>
+        <a href="#">Все права защищены</a>
+        <a href="#">Политика конфиденциальности</a>
       </div>
     </footer>
   </body>
