--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -245,12 +245,21 @@
       <div class="footernote">
         <h1>...или приходите в наш офис</h1>
         <div class="contact">
-          <img src="/img/point.svg" alt="Пиктограмма маркера" />
-          <p>г. Уфа, ул. Карла Маркса, 19 c 10:00 до 19:00</p>
-          <img src="/img/cell.svg" alt="Пиктограмма телефона" />
-          <p>+ 7 (999) 123 45 67</p>
-          <img src="/img/mail.svg" alt="Пиктограмма конверта" />
-          <p>bashtour@gmail.com</p>
+          <div class="imgrow">
+            <img src="/img/point.svg" alt="Пиктограмма маркера" />
+            <img src="/img/cell.svg" alt="Пиктограмма телефона" />
+            <img src="/img/mail.svg" alt="Пиктограмма конверта" />
+          </div>
+          <div class="textrow">
+            <p>
+              <span class="monserat500"
+                >г. Уфа, ул. Карла Маркса, 19 <br
+              /></span>
+              <span class="marginhack">c 10:00 до 19:00 </span>
+            </p>
+            <p>+ 7 (999) 123 45 67</p>
+            <p>bashtour@gmail.com</p>
+          </div>
         </div>
       </div>
       <div class="footer">
