--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -242,23 +242,25 @@
       </div>
     </div>
     <footer>
-      <div class="footernote">
-        <h1>...или приходите в наш офис</h1>
-        <div class="contact">
-          <!-- <div class="imgrow"> -->
+      <div class="footerwrapper">
+        <div class="footernote">
+          <h1>...или приходите в наш офис</h1>
+          <div class="contact">
+            <!-- <div class="imgrow"> -->
             <!-- <img src="/img/point.svg" alt="Пиктограмма маркера" /> -->
             <!-- <img src="/img/cell.svg" alt="Пиктограмма телефона" /> -->
             <!-- <img src="/img/mail.svg" alt="Пиктограмма конверта" /> -->
-          <!-- </div> -->
-          <div class="textrow">
-            <p class="textrowPoint">
-              <span class="monserat500"
-                >г. Уфа, ул. Карла Маркса, 19 <br
-              /></span>
-              <span class="marginhack">c 10:00 до 19:00 </span>
-            </p>
-            <p class="textrowTel">+ 7 (999) 123 45 67</p>
-            <p class="textrowMail">bashtour@gmail.com</p>
+            <!-- </div> -->
+            <div class="textrow">
+              <p class="textrowPoint">
+                <span class="monserat500"
+                  >г. Уфа, ул. Карла Маркса, 19 <br
+                /></span>
+                <span class="marginhack">c 10:00 до 19:00 </span>
+              </p>
+              <p class="textrowTel">+ 7 (999) 123 45 67</p>
+              <p class="textrowMail">bashtour@gmail.com</p>
+            </div>
           </div>
         </div>
       </div>
