почти все доделал

--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -13,7 +13,7 @@
       <header>
         <div class="navbar">
           <div class="logo">
-            <img src="/img/Vector.png" alt="BASHTOUR" />
+            <img src="/img/Vector.svg" alt="BASHTOUR" />
             <p><span class="orangeText">BASH</span>TOUR</p>
           </div>
           <nav>
@@ -266,25 +266,30 @@
       </div>
       <div class="footer">
         <div class="logo">
-          <img src="/img/Vector.png" alt="BASHTOUR" />
-          <p>BASHTOUR</p>
+          <img src="/img/Vector.svg" alt="BASHTOUR" />
+          <p>
+            <span class="orangeText">BASH</span>
+            <span class="wihtelogo">TOUR</span>
+          </p>
         </div>
         <div class="social">
           <a href="#">
-            <img src="#" alt="Vk" />
+            <img src="/img/vk.svg" alt="Vk" />
           </a>
           <a href="#">
-            <img src="#" alt="Ints" />
+            <img src="/img/inst.svg" alt="Ints" />
           </a>
           <a href="#">
-            <img src="#" alt="Youtube" />
+            <img src="/img/youtube.svg" alt="Youtube" />
           </a>
           <a href="#">
-            <img src="#" alt="Facebook" />
+            <img src="/img/fb.svg" alt="Facebook" />
           </a>
         </div>
-        <a href="#">Все права защищены</a>
-        <a href="#">Политика конфиденциальности</a>
+        <div class="copyright">
+          <a class="copyright" href="#">Все права защищены</a>
+          <a class="copyright" href="#">Политика конфиденциальности</a>
+        </div>
       </div>
     </footer>
   </body>
