Набросал скелет gk

--- a/gk.test/www/index.html
+++ b/gk.test/www/index.html
@@ -7,21 +7,192 @@
     <title>Крафтовая кофейня Gourmet Coffee</title>
   </head>
   <body>
+    <div class="mainwrapper">
+      <!-- Тут будет ключевой образ, бариста который льет горячий кофе мимо кружки и обливает руку клиенту -->
       <header>
-          <div class="headerwrapper">
-              <div class="logo">
-
-              </div>
-              <div class="navbar">
-
-              </div>
-              <div class="socialblock">
-
-              </div>
-          </div>
+        <div class="headerwrapper">
+          <div class="logo"></div>
+          <div class="navbar"></div>
+          <div class="socialblock"></div>
+        </div>
       </header>
-      <div class="mainwrapper">
-
+      <div class="heroheader"></div>
+      <div class="menu">
+        <div class="category"></div>
+        <div class="product">
+          <div class="arowbig"></div>
+        </div>
       </div>
+      <div class="info">
+        <h1>Познакомимся поближе</h1>
+        <div class="infocontent">
+          <img src="#" alt="кофе" />
+          <h2>Каким должен быть вкусный кофе?</h2>
+          <p>
+            Крафтовым кофе называют сорта, которые создают по специальным
+            рецептам в незначительных количествах. Это зерна с особенным вкусом,
+            рецепт обжарки которых мастера не раскрывают. Крафтовый кофе часто
+            выполняют по индивидуальному заказу клиента. Зерна особой обжарки
+            невозможно найти в магазинах, они продаются только в
+            специализированных мастерских, занимающихся созданием великолепных
+            крафтовых сортов. Их производят вручную, поэтому партии товара
+            всегда маленькие, а обжарка максимально свежая. Уникальная
+            рецептура, лучшие сорта кофе, ручная работа и ограниченное
+            количество формируют стоимость. Она всегда выше, чем цена обычных
+            предложений, которых полно в супермаркетах. Но вкус крафтового зерна
+            способен удивить, он надолго оставит на губах невероятное
+            послевкусие.
+          </p>
+        </div>
+      </div>
+      <div class="whatWe">
+        <h1>Почему выбирают нас?</h1>
+        <div class="recipeBlock">
+          <div class="recipe">
+            <img src="#" alt="Картинка с кофем" />
+            <h2>Мы предлагаем необычные рецепты</h2>
+            <p>
+              Эспрессо и американо — неизменная классика кофе. Но, кроме того,
+              это превосходная основа для оригинальных кофейных коктейлей,
+              которые вы можете попробовать в нашем заведении.
+            </p>
+          </div>
+          <div class="recipe">
+            <img src="#" alt="Картинка с кофем" />
+            <h2>Мы предлагаем необычные рецепты</h2>
+            <p>
+              Эспрессо и американо — неизменная классика кофе. Но, кроме того,
+              это превосходная основа для оригинальных кофейных коктейлей,
+              которые вы можете попробовать в нашем заведении.
+            </p>
+          </div>
+          <div class="recipe">
+            <img src="#" alt="Картинка с кофем" />
+            <h2>Мы предлагаем необычные рецепты</h2>
+            <p>
+              Эспрессо и американо — неизменная классика кофе. Но, кроме того,
+              это превосходная основа для оригинальных кофейных коктейлей,
+              которые вы можете попробовать в нашем заведении.
+            </p>
+          </div>
+          <div class="recipe">
+            <img src="#" alt="Картинка с кофем" />
+            <h2>Мы предлагаем необычные рецепты</h2>
+            <p>
+              Эспрессо и американо — неизменная классика кофе. Но, кроме того,
+              это превосходная основа для оригинальных кофейных коктейлей,
+              которые вы можете попробовать в нашем заведении.
+            </p>
+          </div>
+          <div class="recipe">
+            <img src="#" alt="Картинка с кофем" />
+            <h2>Мы предлагаем необычные рецепты</h2>
+            <p>
+              Эспрессо и американо — неизменная классика кофе. Но, кроме того,
+              это превосходная основа для оригинальных кофейных коктейлей,
+              которые вы можете попробовать в нашем заведении.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="workprofessional">
+        <h1>У нас работают только профессионалы</h1>
+        <div class="workpeopleblock">
+          <div class="rollerblock">
+            <img src="#" alt="стрелка в лево" />
+            <div class="workerportfolio">
+              <img src="#" alt="Фото работника" />
+              <p>Иванов Иван</p>
+              <p>
+                Бариста – работник кафе, который варит кофе и готовит на его
+                основе различные напитки и десерты. Эта профессия похожа на
+                профессию бармена, но стихия бариста – не алкоголь, а ароматный,
+                бодрящий кофе.
+              </p>
+            </div>
+            <img src="#" alt="стрелка в право" />
+          </div>
+          <div class="zerno">
+            <img src="#" alt="" />
+            <img src="#" alt="" />
+            <img src="#" alt="" />
+            <img src="#" alt="" />
+            <img src="#" alt="" />
+            <img src="#" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="rewardsblock">
+        <h1>Нам есть чем гордиться</h1>
+        <div class="rewards">
+          <div class="reward">
+            <img src="#" alt="Картинка кофе" />
+            <p>Премия «Бариста года 2019»</p>
+            <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
+          </div>
+          <div class="reward">
+            <img src="#" alt="Картинка кофе" />
+            <p>Премия «Бариста года 2019»</p>
+            <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
+          </div>
+          <div class="reward">
+            <img src="#" alt="Картинка кофе" />
+            <p>Премия «Бариста года 2019»</p>
+            <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
+          </div>
+        </div>
+      </div>
+      <div class="delivery">
+        <!-- на фоне картинка зерен в турке-->
+        <h1>Действует доставка!</h1>
+        <p>
+          Доставляем кофе в зёрнах и десерты за 30 минут по Адмиралтейскому
+          району. Минимальная сумма заказа — 500 рублей.
+        </p>
+        <!-- тут будет кнопка -->
+        <button>Заказать</button>
+      </div>
+      <div class="maps">
+        <div class="addres">
+          <h1>Мы ждем вас!</h1>
+          <p>9:00 — 21:00</p>
+          <p>ул. Малая Морская, 9</p>
+          <p>ул. Конногвардейский бульвар, 13</p>
+        </div>
+        <div class="map">
+          <!-- тут будет карта, вставлю из яндекса -->
+        </div>
+      </div>
+      <footer>
+        <div class="footerwrapper">
+          <div class="logo"></div>
+          <div class="navbar">
+            <h1>Навигация</h1>
+            <a href="#">Меню</a>
+            <a href="#">О нас</a>
+            <a href="#">Команда</a>
+            <a href="#">Доставка</a>
+          </div>
+          <div class="menufuter">
+            <h1>Меню</h1>
+            <a href="#">Кофе</a>
+            <a href="#">Чай</a>
+            <a href="#">Лимонады</a>
+            <a href="#">Десерты</a>
+            <a href="#">Кофе в зёрнах</a>
+          </div>
+          <div class="contects">
+            <p>+7 (XXX) XXX - XX - XX</p>
+            <p>gourmetcoffee@gmail.com</p>
+            <div class="minisocialblock">
+              <a href="#"><img src="/img/instwhite.svg" alt="Instagramm" /></a>
+              <a href="#"><img src="/img/vkwhite.svg" alt="VK" /></a>
+              <a href="#"><img src="/img/twitterwhite.svg" alt="Twitter" /></a>
+            </div>
+            <a href="#">Заказать доставку</a>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
